2006-10-09  Nicola Pero <nicola.pero@meta-innovation.com>

	If you further modify any makefile using ProjectCenter, manually
	edit it before committing removing any line that sets
	GNUSTEP_INSTALLATION_DIR.
	* GNUmakefile: Do not try to set GNUSTEP_INSTALLATION_DIR.
	* Documentation/GNUmakefile: Same change.
	* GormCore/GNUmakefile: Same change.
	* GormObjCHeaderParser/GNUmakefile: Same change.
	* GormPrefs/GNUmakefile: Samce change.
	
2006-10-08 20:32-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/ClassInformation.plist: Add NSSearchField and
	NSSearchFieldCell.

2006-10-06  Richard Frith-Macdonald <rfm@gnu.org>

	* GormCore/GormPalettesManager.m: rewrite code to set up drag image
	so we avoid glitches on the pallette view (we no longer use the
	pallette window directly as the cached image window) and ensure that
	the image dragged is all copied correctly to avoid the glitches
	when dragging BSBox and NSScrollView items.

2006-10-06 00:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Minor cleanup in handleNotification: 
	method.

2006-10-05 13:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassEditor.gorm: Added new gorm file to hold
	classes view contents as well as search and operations drop down.
	* English.lproj/GormDocument.gorm: Removed search and drop down
	* GNUmakefile: Added new gorm file.
	* GormCore/GormClassEditor.h: new outlets classesView and mainView, 
	added declarations for methods createSubclass:, createClassFiles:, 
	instantiateClass:, removeClass:
	* GormCore/GormClassEditor.m: Changes to methods to use the above.
	* GormCore/GormDocument.h: Removed duplicate declarations.
	* GormCore/GormDocument.m: Remove code for methods and replace with
	simple calls to the editor.
	* Palettes/2Controls/GormBoxAttributesInspector.m: ok: and revert:
	changed to convert to integer.  

2006-10-04 22:35-EDT Gregory John Casamento <greg_casamento@yahoo.com>
