@@ -1,3 +1,11 @@
+2006-10-09 23:54-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* English.lproj/GormClassEditor.gorm: Added button and search image.
+	* GNUmakefile: Added new tiff files to images.
+	* GormCore/GormClassEditor.m: Added toggleView: method.
+	* Images/browserView.tiff: Browser image.
+	* Images/outlineView.tiff: Outline image.
+
 2006-10-09  Nicola Pero <nicola.pero@meta-innovation.com>
 
 	If you further modify any makefile using ProjectCenter, manually
